[metadata]
description-file = README.md

[mypy-eventsourcing.tests.*]
ignore_errors = True

[mypy-eventsourcing.infrastructure.cassandra.*]
ignore_errors = True

[mypy-eventsourcing.infrastructure.sqlalchemy.records.*]
ignore_errors = True

[mypy-eventsourcing.infrastructure.django.migrations.*]
ignore_errors = True

[mypy-eventsourcing.contrib.paxos.composable]
ignore_errors = True

[mypy-eventsourcing.contrib.suffixtrees.*]
ignore_errors = True

[mypy-eventsourcing.example.*]
ignore_errors = True

[mypy-eventsourcing.system.actors.*]
disallow_untyped_defs = False

[mypy-eventsourcing.domain.model.decorators.*]
disallow_untyped_defs = False

[mypy-eventsourcing.domain.model.timebucketedlog.*]
disallow_untyped_defs = False

[mypy-eventsourcing.domain.model.collection.*]
disallow_untyped_defs = False

[mypy-eventsourcing.domain.model.array.*]
disallow_untyped_defs = False

[mypy-eventsourcing.utils.transcoding.*]
disallow_untyped_defs = False

[mypy]
ignore_missing_imports = True
incremental = True
follow_imports = normal
warn_redundant_casts = True
warn_unused_ignores = True
strict_optional = True
no_implicit_optional = True
disallow_untyped_defs = True
;disallow_any_generics = True
