[metadata]
description-file = README.md

[mypy-eventsourcing.tests.*]
ignore_errors = True

[mypy-eventsourcing.infrastructure.cassandra.*]
ignore_errors = True

[mypy-eventsourcing.infrastructure.sqlalchemy.records.*]
ignore_errors = True

[mypy-eventsourcing.infrastructure.django.migrations.*]
ignore_errors = True

[mypy-eventsourcing.contrib.paxos.composable]
ignore_errors = True

[mypy-eventsourcing.contrib.suffixtrees.*]
ignore_errors = True

[mypy-eventsourcing.example.*]
ignore_errors = True

[mypy-eventsourcing.utils.transcoding.*]
disallow_untyped_defs = False

[mypy-eventsourcing.system.thespian.*]
disallow_untyped_defs = False

[mypy-eventsourcing.domain.model.array.*]
disallow_untyped_defs = False

[mypy]
ignore_missing_imports = True
incremental = True
follow_imports = normal
warn_redundant_casts = True
warn_unused_ignores = True
strict_optional = True
no_implicit_optional = True
disallow_untyped_defs = True
;disallow_any_generics = True

[isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
line_length = 88
combine_as_imports = true
default_section = LOCALFOLDER
known_first_party = eventsourcing
known_standard_library = dataclasses
known_third_party = django
not_skip = __init__.py
sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
skip = .eggs,.pip-cache,venv,.venv

[flake8]
max-line-length = 80
select = C,E,F,W,B,B950
ignore = E203, E501, W503
